--- a/FRONTEND/vault_view.css
+++ b/FRONTEND/vault_view.css
@@ -66,7 +66,7 @@ h4 {
     backdrop-filter: blur(5px);
 }
 
-.modal-content {
+.modal-content { 
     background-color: #f3f1f9;
     margin: 5% auto;
     padding: 20px;
@@ -75,6 +75,8 @@ h4 {
     text-align: left;
     position: relative;
     filter: brightness(0.95);
+    max-height: 80vh; 
+    overflow: auto; 
 }
 
 .modal-content input {
